--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -14,4 +14,6 @@
     <string name="channel_name_hint">频道名称</string>
     <string name="current_user_list">当前用户列表</string>
     <string name="switch_camera">切换摄像头</string>
+    <string name="camera_on">开启摄像头</string>
+    <string name="camera_off">关闭摄像头</string>
 </resources>
